--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ kotlin {
         compilations.main.cinterops{
             glfw{}
             glew{}
+            stb_image{}
         }
         binaries {
             executable {
